@@ -1,0 +1,7 @@
+.odd {
+background: none repeat scroll 0 0 #EEEEEE;
+}
+
+.even {
+
+}
